@@ -1,5 +1,5 @@
 .\"
-.\" $Id: greylist.conf.5,v 1.85 2008/02/06 04:11:39 manu Exp $
+.\" $Id: greylist.conf.5,v 1.86 2008/06/03 10:26:19 manu Exp $
 .\"
 .\" Copyright (c) 2004-2007 Emmanuel Dreyfus
 .\" All rights reserved.
@@ -599,7 +599,7 @@ example:
 .PP
 The trailing 5 at the end of the
 .I urlcheck
-definition is the maximum number of simultaneous connexions we want to 
+definition is the maximum number of simultaneous connections we want to 
 launch on this URL. For each message, the URL will be querried, with  % format 
 tags being subtituted. For instance,
 .I %r
